--- a/assets/css/settings.styl
+++ b/assets/css/settings.styl
@@ -5,3 +5,7 @@ Montserrat = 'Montserrat', sans-serif
 // COLORS
 softorange = #F4A259
 tomatored = #F25C66
+
+/* This only changes this particular animation duration */
+.animate__animated.animate__bounce
+  --animate-duration: 2s;
