--- a/assets/css/product/index.styl
+++ b/assets/css/product/index.styl
@@ -8,8 +8,23 @@
     height 220px
     & .productOptionName
         font-size .8rem
+        position relative
+        
     &:hover
         border-color red !important
+
+.productCustomName
+    position relative
+    & > button
+        height 31px
+        position absolute
+        right 15px
+        top 50%
+        margin-top -15.5px
+        opacity .8
+        &:hover
+            opacity 1
+
 .cardCustom
     height 220px
 .optionsSelected
