get products in vtex

--- a/assets/css/product/index.styl
+++ b/assets/css/product/index.styl
@@ -12,7 +12,14 @@
         
     &:hover
         border-color red !important
-
+.resultProduct
+    overflow hidden
+    max-height 0
+    transition max-height 0.5s cubic-bezier(0, 1, 0, 1)
+    &.full
+        max-height 2000px
+        transition max-height 1s ease-in-out
+  
 .productCustomName
     position relative
     & > button
