--- a/assets/css/settings.styl
+++ b/assets/css/settings.styl
@@ -9,3 +9,7 @@ tomatored = #F25C66
 /* This only changes this particular animation duration */
 .animate__animated.animate__bounce
   --animate-duration: 2s;
+
+@media screen and (min-width: 1200px)
+  .container, .container-lg, .container-md, .container-sm, .container-xl
+    max-width 1300px
