--- a/assets/css/dashboard/index.styl
+++ b/assets/css/dashboard/index.styl
@@ -1,3 +1,8 @@
+body
+    .text-primary
+        color #247471 !important
+    & .border-primary
+        border-color #247471 !important
 .typeName
     height 40px
     display flex
