--- a/assets/css/custom/index.styl
+++ b/assets/css/custom/index.styl
@@ -5,6 +5,23 @@
         &.hide
             display none
 
+#productCustonsNv2
+    & .cardOption
+        cursor pointer
+        &:hover
+            border-color red !important
+body
+    & .listOptionsByCustom
+        & h5
+            font-size 14px
+            text-transform capitalize
+
+    & .typeCustomItem
+        cursor pointer
+        border 1px solid #ccc
+        &:hover
+            border-color red !important
+
 .cardCustom
     & .card-body
         border 2px solid transparent
