--- a/assets/css/dashboard/index.styl
+++ b/assets/css/dashboard/index.styl
@@ -3,6 +3,8 @@ body
         color #247471 !important
     & .border-primary
         border-color #247471 !important
+        &.exclude
+            border-color red !important
 .typeName
     height 40px
     display flex
