--- a/assets/css/product/index.styl
+++ b/assets/css/product/index.styl
@@ -1,3 +1,33 @@
+.productCustons
+    & .productType
+        &.selected
+            opacity .7
+            & > .card
+                border-color: #CF423C !important
+                &, & h3
+                    color: #CF423C !important
+
+.productCustonsNv1
+    & .listCustomByType
+        & > div
+            & .card-body
+                cursor pointer
+            &.selected
+                opacity .7
+                & > .card
+                    border-color: #CF423C !important
+                    &, & h6
+                        color: #CF423C !important
+
+.listOptionsByCustom
+    & > div
+        &.show
+            opacity .7
+            & > .card
+                border-color: #CF423C !important
+                &, & h5
+                    color: #CF423C !important
+
 .productOption
     & .card
         cursor pointer
