add exclusions correct

--- a/assets/css/product/index.styl
+++ b/assets/css/product/index.styl
@@ -8,6 +8,9 @@
                     color: #CF423C !important
 
 .listOptionstoSelect
+    input[type=checkbox]
+        width 20px
+        height 20px
     & > div
         &.selected
             opacity .7
