--- a/assets/css/custom/index.styl
+++ b/assets/css/custom/index.styl
@@ -1,3 +1,5 @@
+.tabContentTypes
+    width 100%
 .container-types
     transition: all 1s
     & > div
@@ -44,6 +46,9 @@ body
             top 50%
             margin-top -15.5px
             opacity .0
+
+            &.btnChangeCustom
+                right 45px
     &:hover
         & .card-header
             & > button
