--- a/assets/css/product/index.styl
+++ b/assets/css/product/index.styl
@@ -60,7 +60,7 @@
     max-height 0
     transition max-height 0.5s cubic-bezier(0, 1, 0, 1)
     &.full
-        max-height 5000px
+        max-height initial
         transition max-height 1s ease-in-out
 .searchProductDesc
     font-size .75rem
