--- a/assets/css/product/index.styl
+++ b/assets/css/product/index.styl
@@ -1,3 +1,37 @@
+.optionsListBySearch
+    .card-header
+        font-size 12px
+        height 60px
+
+.listCustonsBySearch
+    
+    &__item
+
+        .card-header
+
+            cursor pointer
+
+            &:hover
+                background-color #247471
+                color white
+
+        input
+            width 25px
+            height 25px
+
+.optionsListBySearch
+
+    .optionItem
+
+        cursor pointer
+        
+        &.remove
+
+            .card
+                border-color red
+
+        
+
 .productCustons
     & .productType
         &.selected
