--- a/assets/css/product/index.styl
+++ b/assets/css/product/index.styl
@@ -7,9 +7,14 @@
     
     &__item
 
+        .card-footer
+            font-size 11px
+
         .card-header
 
             cursor pointer
+            font-size 12px
+            font-weight 600
 
             &:hover
                 background-color #247471
